# 2024-RC-Code

GxxArm_ws/: README.md
GxxArm_ws/install/: local_setup.sh  setup.sh
GxxArm_ws/install/Kinesiology_arm_rclcpp/lib/Kinesiology_arm_rclcpp/: arm_FK_client  arm_FK_server  arm_IK_client  arm_IK_server  arm_kinesiology_client  arm_kinesiology_server
GxxArm_ws/install/Kinesiology_arm_rclcpp/share/Kinesiology_arm_rclcpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
GxxArm_ws/install/Kinesiology_arm_rclcpp/share/Kinesiology_arm_rclcpp/cmake/: Kinesiology_arm_rclcppConfig.cmake
GxxArm_ws/install/Kinesiology_arm_rclcpp/share/Kinesiology_arm_rclcpp/launch/: IK.launch.py
GxxArm_ws/install/Kinesiology_arm_rclcpp/share/ament_index/resource_index/package_run_dependencies/: Kinesiology_arm_rclcpp
GxxArm_ws/install/Kinesiology_arm_rclcpp/share/ament_index/resource_index/parent_prefix_path/: Kinesiology_arm_rclcpp
GxxArm_ws/install/base_interfaces/include/base_interfaces/base_interfaces/msg/: robot_pose.h
GxxArm_ws/install/base_interfaces/include/base_interfaces/base_interfaces/msg/detail/: robot_pose__functions.h  robot_pose__struct.hpp  robot_pose__type_support.c  robot_pose__type_support.cpp  robot_status__builder.hpp  robot_status__functions.c  robot_status__functions.h  robot_status__rosidl_typesupport_fastrtps_cpp.hpp  robot_status__struct.h  robot_status__struct.hpp
GxxArm_ws/install/base_interfaces/include/base_interfaces/base_interfaces/srv/: arm_angle.h  vision_angle.h
GxxArm_ws/install/base_interfaces/include/base_interfaces/base_interfaces/srv/detail/: arm_angle__functions.c  arm_angle__functions.h  arm_angle__rosidl_typesupport_fastrtps_c.h  arm_angle__rosidl_typesupport_fastrtps_cpp.hpp  arm_angle__rosidl_typesupport_introspection_c.h  arm_angle__rosidl_typesupport_introspection_cpp.hpp  arm_angle__struct.h  arm_angle__struct.hpp  arm_angle__traits.hpp  arm_angle__type_support.cpp  vision_angle__functions.c  vision_angle__functions.h  vision_angle__struct.h  vision_angle__traits.hpp  vision_angle__type_support.cpp
GxxArm_ws/install/base_interfaces/local/lib/python3.10/dist-packages/base_interfaces/: _base_interfaces_s.ep.rosidl_typesupport_c.c
GxxArm_ws/install/base_interfaces/local/lib/python3.10/dist-packages/base_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
GxxArm_ws/install/base_interfaces/local/lib/python3.10/dist-packages/base_interfaces/srv/: __init__.py  _vision_angle.py  _vision_angle_s.c
GxxArm_ws/install/base_interfaces/share/base_interfaces/: package.dsv  package.ps1  package.sh  package.xml
GxxArm_ws/install/base_interfaces/share/base_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  base_interfaces__rosidl_typesupport_cExport-noconfig.cmake  base_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  base_interfaces__rosidl_typesupport_cppExport.cmake  base_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  base_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_base_interfaces__rosidl_generator_cExport-noconfig.cmake  export_base_interfaces__rosidl_generator_pyExport.cmake
GxxArm_ws/install/base_interfaces/share/base_interfaces/msg/: RobotPose.idl  RobotStatus.idl
GxxArm_ws/install/base_interfaces/share/base_interfaces/srv/: ArmAngle.idl  ArmAngle_Request.msg  VisionAngle_Request.msg
GxxArm_ws/install/serial_com_rclcpp/lib/serial_com_rclcpp/: Serial_ReadPub  Serial_WriteSub
GxxArm_ws/install/serial_com_rclcpp/share/ament_index/resource_index/package_run_dependencies/: serial_com_rclcpp
GxxArm_ws/install/serial_com_rclcpp/share/serial_com_rclcpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
GxxArm_ws/log/: latest_build
GxxArm_ws/src/base_interfaces/: CMakeLists.txt
GxxArm_ws/src/base_interfaces/msg/: RobotPose.msg  RobotStatus.msg
GxxArm_ws/src/base_interfaces/srv/: VisionAngle.srv
GxxArm_ws/src/kinesiology_arm_rclcpp/: CMakeLists.txt
GxxArm_ws/src/kinesiology_arm_rclcpp/include/kinesiology_arm_rclcpp/: Kinesiology_arm.hpp
GxxArm_ws/src/kinesiology_arm_rclcpp/src/: arm_FK_client.cpp  arm_FK_server.cpp  arm_IK_client.cpp  arm_IK_server.cpp
GxxArm_ws/src/serial_com_rclcpp/: CMakeLists.txt  package.xml
GxxArm_ws/src/serial_com_rclcpp/include/serial_com_rclcpp/: serial_port.hpp
GxxArm_ws/src/serial_com_rclcpp/launch/: serial.launch.py
GxxArm_ws/src/serial_com_rclcpp/src/: Serial_ReadPub.cpp  Serial_WriteSub.cpp
